--- a/node-express/package.json
+++ b/node-express/package.json
@@ -2,7 +2,7 @@
   "name": "m-dict",
   "version": "1.0.0",
   "description": "dictionaty",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "install": "^0.12.2",
-    "mongodb": "^3.1.13",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
+    "mongodb": "^3.2.7",
     "mongodb-backup": "^1.6.9",
+    "mongojs": "^2.6.0",
     "mongoose": "^5.4.19",
-    "npm": "^6.9.0",
+    "npm": "^6.10.2",
     "save": "^2.3.3"
   },
   "devDependencies": {}
