--- a/node-express/package.json
+++ b/node-express/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "history": "^4.9.0",
     "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
