--- a/node-express/utils/config.json
+++ b/node-express/utils/config.json
@@ -1,3 +1,9 @@
 {
-  "myprivatekey": ")jHXTt6P3yh(;KJ$uU4:f%*7gU5AC:js/pB3M}!,+DCD}QTvpPsuT,h3=vqBkSh:Cu~yN4F>R>ZRPY"
+  "secret": ")jHXTt6P3yh(;KJ$uU4:f%*7gU5AC:js/pB3M}!,+DCD}QTvpPsuT,h3=vqBkSh:Cu~yN4F>R>ZRPY",
+  "COOKIE_NAME":"mdict",
+  "pages":{
+    "teacher":"/teachersRoom",
+    "students":"/dictionery"
+  },
+  "DB_URL":"mongodb://mordict-6518:V5p6ZxwtJnGrKVSPCcogji6nURiR0a@db-mordict-6518.nodechef.com:5421/mordict"
 }
